load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# xcodeproj just to create the xcodeproj directory
# You need to rerun it regularly to keep XCode updated
# bazel run example-ios-app:xcodeproj && xed example-ios-app/example-ios-app/xcodeproj
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcodeproj")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

swift_library(
    name = "lib",
    srcs = ["BazelApp.swift"],
    copts = STRICT_MAINACTOR_COPTS,
    deps = [
        "//example-ios-app/JsWrap",
        "//example-ios-app/utils",
    ],
)

ios_application(
    name = "example-ios-app",
    bundle_id = "build.bazel.rules-apple-example",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "18.0",
    visibility = ["//visibility:public"],
    deps = [":lib"],
)

xcodeproj(
    name = "xcodeproj",
    project_name = "example-ios-app",
    tags = ["manual"],
    top_level_targets = [
        ":example-ios-app",
    ],
)
