load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcodeproj")
load("@sourcekit_bazel_bsp//rules:setup_sourcekit_bsp.bzl", "setup_sourcekit_bsp")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

swift_library(
    name = "lib",
    srcs = ["BazelApp.swift"],
    copts = STRICT_MAINACTOR_COPTS,
    deps = [
        "//example-ios-app/JsWrap",
        "//example-ios-app/drag-example",
        "//example-ios-app/jotai-example",
        "//example-ios-app/rust-logs",
        "//example-ios-app/rust-uniffi-example",
        "//example-ios-app/rust_lib/bridge",
        "//example-ios-app/sqlite-example",
        "//example-ios-app/utils",
        "//rust-code/jotai-logs:jotai-logs-swift",
        "//swift-shared/FileUtils",
        "//swift-shared/SwiftUIUtils",
    ],
)

ios_application(
    name = "example-ios-app",
    bundle_id = "build.bazel.rules-apple-example",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    linkopts = ["-lsqlite3"],
    minimum_os_version = "18.0",
    visibility = ["//visibility:public"],
    deps = [":lib"],
)

# xcodeproj just to create the xcodeproj directory
# You need to rerun it regularly to keep XCode updated
# bazel run example-ios-app:xcodeproj && xed example-ios-app/example-ios-app/xcodeproj
xcodeproj(
    name = "xcodeproj",
    project_name = "example-ios-app",
    tags = ["manual"],
    top_level_targets = [
        ":example-ios-app",
    ],
)

setup_sourcekit_bsp(
    name = "setup-bsp",
    bazel_wrapper = "bazelisk",
    compile_top_level = True,
    files_to_watch = [
        "**/*.swift",
        "**/*.m",
        "**/*.h",
    ],
    index_flags = [
        "config=index_build",
    ],
    targets = [
        "//example-ios-app",
    ],
)
