load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")
load("@build_bazel_rules_apple//apple:watchos.bzl", "watchos_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)
load("@sourcekit_bazel_bsp//rules:setup_sourcekit_bsp.bzl", "setup_sourcekit_bsp")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

swift_library(
    name = "lib",
    srcs = ["MainApp.swift"],
    copts = STRICT_MAINACTOR_COPTS,
    deps = [
        "//g1-app/content",
        "//g1-app/utils",
    ],
)

ios_application(
    name = "g1-app",
    bundle_id = "com.ayroblu.g1-app",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "18.0",
    # cp ~/Library/Developer/Xcode/UserData/Provisioning\ Profiles/<uuid>.mobileprovision .
    provisioning_profile = "5bc6ee9b-186f-4f5c-8525-0382a219531e.mobileprovision",
    resources = glob(
        ["Assets/*"],
        exclude_directories = 0,
    ),
    visibility = ["//visibility:public"],
    deps = [":lib"],
)

watchos_application(
    name = "watch-app",
    bundle_id = "com.ayroblu.g1-app",
    infoplists = ["//g1-app/watch-app:Info.plist"],
    minimum_os_version = "10.0",
    provisioning_profile = "5bc6ee9b-186f-4f5c-8525-0382a219531e.mobileprovision",
    visibility = ["//visibility:public"],
    deps = ["//g1-app/watch-app"],
)

# filegroup(
#     name = "Assets.xcassets",
#     srcs = glob(["Assets.xcassets/**"]),
# )

# macos_application(
#     name = "macos",
#     # app_icons = [":Assets.xcassets"],
#     bundle_id = "com.ayroblu.g1-app",
#     #bundle_name = "g1-app",
#     #entitlements = ":g1-app.entitlements",
#     infoplists = ["Resources/Info.plist"],
#     minimum_os_version = "15.0",
#     #resources = glob(["Resources/*"]),
#     #version = ":version",
#     visibility = ["//visibility:public"],
#     deps = [":lib"],
# )

# bazel run xcodeproj && xed g1-app.xcodeproj
xcodeproj(
    name = "xcodeproj",
    project_name = "g1-app",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            ":g1-app",
            target_environments = [
                "device",
                "simulator",
            ],
        ),
        top_level_target(
            ":watch-app",
            target_environments = [
                "device",
                "simulator",
            ],
        ),
    ],
)

setup_sourcekit_bsp(
    name = "setup-bsp",
    bazel_wrapper = "bazelisk",
    files_to_watch = [
        "**/*.swift",
        "**/*.h",
        "**/*.m",
    ],
    index_flags = [
        "config=index_build",
    ],
    targets = [
        "//g1-app",
    ],
)
