# Repin with:
# CARGO_BAZEL_REPIN=1 bazel build //rust-code/edit-files
[workspace]
[package]
name = "rust-code"
version = "0.1.0"
edition = "2021"
publish = false

[patch.crates-io]
# Fork due to:
# https://github.com/tree-sitter/tree-sitter/issues/3353
# https://github.com/tree-sitter/tree-sitter/pull/3352
tree-sitter = { git = "https://github.com/ayroblu/tree-sitter.git", branch = "v0.21.0-bazel" }
# tree-sitter = { git = "https://github.com/redsun82/tree-sitter.git", branch = "fix-rust-build-script" }

[dependencies]
tree-sitter = { git = "https://github.com/ayroblu/tree-sitter.git", branch = "v0.21.0-bazel" }
# tree-sitter = { git = "https://github.com/redsun82/tree-sitter.git", branch = "fix-rust-build-script" }
tree-sitter-scala = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-starlark = "1.1.0"
tree-sitter-typescript = "0.21.1"

[build-dependencies]
cc="*"

[[bin]]
name = "edit-files"
path = "edit-files/main.rs"

