load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")
load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_compiler_plugin")

# Java Toolchain
default_java_toolchain(
    name = "java_toolchain",
    visibility = ["//visibility:public"],
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    # jvm_target = "11",
)

kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        "@maven_compose//:org_jetbrains_kotlin_kotlin_compose_compiler_plugin_embeddable",
    ],
)

kt_compiler_plugin(
    name = "serialization_compiler_plugin",
    id = "org.jetbrains.kotlin.serialization",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        "@rules_kotlin//kotlin/compiler:kotlinx-serialization-compiler-plugin",
    ],
)

# Temporary, fixed proguard_specs for next release of rules_android
alias(
    name = "simple-android-app",
    actual = select({
        "//conditions:default": ":dev",
        "//:release_build": ":prod",
    }),
)

android_binary(
    name = "dev",
    custom_package = "com.simple.bazel",
    dex_shards = 5,
    incremental_dexing = 1,
    manifest = "AndroidManifest.xml",
    multidex = "native",
    deps = [
        "//simple-android-app/src",
    ],
)

android_binary(
    name = "prod",
    custom_package = "com.simple.bazel",
    dex_shards = 5,
    incremental_dexing = 1,
    manifest = "AndroidManifest.xml",
    multidex = "native",
    proguard_specs = ["proguard-rules.pro"],
    shrink_resources = True,
    deps = [
        "//simple-android-app/src",
    ],
)
