load("@rules_rust//rust:defs.bzl", "rust_binary")
load(":node.bzl", "node_lib", "node_platforms")
# load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//visibility:public"])

# alias(
#     name = "swiftformat",
#     actual = select({
#         "@bazel_tools//src/conditions:linux": "@swiftformat",
#         "@bazel_tools//src/conditions:darwin": "@swiftformat_mac",
#     }),
# )

# format_multirun(
#     name = "format",
#     starlark = "@buildifier_prebuilt//:buildifier",
#     swift = ":swiftformat",
# )

node_platforms()

# node_lib(
#     name = "foo",
#     sha256 = "3a3058cb460899587bf5a3129309826886c704b8ad9ff69d9b55ad99b2c843e2",
#     version = "v22.2.0",
# )

rust_binary(
    name = "uniffi-bindgen",
    srcs = ["uniffi-bindgen.rs"],
    deps = ["@crates//:uniffi"],
)
