load("@rules_rust//rust:defs.bzl", "rust_binary")
load(":node.bzl", "node_lib", "node_platforms")
# load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

package(default_visibility = ["//visibility:public"])

# alias(
#     name = "swiftformat",
#     actual = select({
#         "@bazel_tools//src/conditions:linux": "@swiftformat",
#         "@bazel_tools//src/conditions:darwin": "@swiftformat_mac",
#     }),
# )

# format_multirun(
#     name = "format",
#     starlark = "@buildifier_prebuilt//:buildifier",
#     swift = ":swiftformat",
# )

node_platforms()

# node_lib(
#     name = "foo",
#     sha256 = "3a3058cb460899587bf5a3129309826886c704b8ad9ff69d9b55ad99b2c843e2",
#     version = "v22.2.0",
# )

rust_binary(
    name = "uniffi-bindgen",
    srcs = ["uniffi-bindgen.rs"],
    deps = ["@crates//:uniffi"],
)

rust_binary(
    name = "ubrn",
    srcs = ["ubrn.rs"],
    deps = [
        "@crates//:clap",
        "@crates//:uniffi-bindgen-react-native",
    ],
)

# rust_binary(
#     name = "wasm-bindgen",
#     srcs = ["wasm-bindgen.rs"],
#     deps = [
#         "@crates//:env_logger",
#         "@crates//:wasm-bindgen-cli",
#     ],
# )

genrule(
    name = "wasm-bindgen",
    outs = [
        "wasm-bindgen-file",
    ],
    cmd = """
        curl -L https://github.com/wasm-bindgen/wasm-bindgen/releases/download/0.2.105/wasm-bindgen-0.2.105-aarch64-apple-darwin.tar.gz | tar -xzv
        mv wasm-bindgen-0.2.105-aarch64-apple-darwin/wasm-bindgen $@
        """,
)
