load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")

package(default_visibility = ["//card-wallet-app:__subpackages__"])

swift_library(
    name = "content",
    srcs = glob(
        ["*.swift"],
        ["*Tests.swift"],
    ),
    copts = select({
        "//conditions:default": ["-DDEBUG"],
        "//:release_build": ["-DRELEASE"],
    }),
    deps = [
        "//swift-shared/Jotai",
        "//swift-shared/LogUtils",
        "//swift-shared/SwiftUIUtils",
    ],
)
