load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")

package(default_visibility = ["//card-wallet-app:__subpackages__"])

swift_library(
    name = "shortcuts",
    srcs = glob(
        ["*.swift"],
        ["*Tests.swift"],
    ),
    copts = select({
        "//conditions:default": ["-DDEBUG"],
        "//:release_build": ["-DRELEASE"],
    }),
    linkopts = [
        "-framework",
        "AppIntents",
    ],
    module_name = "Shortcuts",
    deps = [
        "//card-wallet-app/src/models",
        "//swift-shared/Jotai",
    ],
)
