load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")

package(default_visibility = ["//card-wallet-app:__subpackages__"])

swift_library(
    name = "src",
    srcs = glob(
        [
            "*.swift",
            "models/*.swift",
        ],
        ["*Tests.swift"],
    ),
    copts = select({
        "//conditions:default": ["-DDEBUG"],
        "//:release_build": ["-DRELEASE"],
    }),
    deps = [
        "//card-wallet-app/src/BarcodeScanner",
        "//swift-shared/Jotai",
        "//swift-shared/LogUtils",
        "//swift-shared/SwiftUIUtils",
    ],
)
