load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package(default_visibility = ["//example-android-app:__subpackages__"])

kt_android_library(
    name = "src",
    custom_package = "examples.android.lib",
    deps = [
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        # "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_core_core_ktx",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
    manifest = "main/AndroidManifest.xml",
    plugins = ["//example-android-app:jetpack_compose_compiler_plugin"],
    srcs = glob(["main/kotlin/**/*.kt"]),
)
