load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

package(default_visibility = ["//example-android-app:__subpackages__"])

kt_android_library(
    name = "src",
    srcs = glob(["main/kotlin/**/*.kt"]),
    custom_package = "examples.android.lib",
    manifest = "main/AndroidManifest.xml",
    plugins = ["//example-android-app:jetpack_compose_compiler_plugin"],
    deps = [
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_core_core_ktx",
        "@maven//:com_google_guava_guava",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
