load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

package(default_visibility = ["//example-ios-app:__subpackages__"])

swift_test(
    name = "JsWrapTests",
    srcs = glob(["*.swift"]),
    copts = STRICT_MAINACTOR_COPTS,
    deps = [
        "//example-ios-app/JsWrap",
    ],
)
