load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

package(default_visibility = ["//example-ios-app:__subpackages__"])

swift_library(
    name = "drag-example",
    srcs = glob(
        ["*.swift"],
    ),
    copts = STRICT_MAINACTOR_COPTS,
    module_name = "drag_example",
)
