load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

package(default_visibility = ["//example-ios-app:__subpackages__"])

swift_library(
    name = "rust-uniffi-example",
    srcs = glob(
        ["*.swift"],
    ),
    copts = STRICT_MAINACTOR_COPTS,
    module_name = "rust_uniffi_example",
    deps = [
        "//rust-code/client-shared/example-shared-lib:example-swift",
        "//rust-code/client-shared/http-shared/swift",
        "//swift-shared/Log",
    ],
)
