load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

package(default_visibility = ["//g1-app:__subpackages__"])

swift_library(
    name = "Connect",
    srcs = glob(
        ["*.swift"],
    ),
    module_name = "Connect",
    deps = [
        "//g1-app/Log",
        "//g1-app/utils",
    ],
)
