load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")

package(default_visibility = ["//g1-app:__subpackages__"])

swift_library(
    name = "content",
    srcs = glob(
        ["**/*.swift"],
        ["**/*Tests.swift"],
    ),
    copts = select({
        "//conditions:default": ["-DDEBUG"],
        "//:release_build": ["-DRELEASE"],
    }),
    module_name = "content",
    deps = [
        "//g1-app/Log",
        "//g1-app/jotai",
        "//g1-app/log-utils",
        "//g1-app/maps",
        "//g1-app/utils",
        "//g1-app/vendor-pcm",
        "@swiftpkg_swift_collections//:Collections",
    ],
)
