load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

package(default_visibility = ["//g1-app:__subpackages__"])

swift_library(
    name = "content",
    srcs = glob(
        ["**/*.swift"],
        ["**/*Tests.swift"],
    ),
    copts = STRICT_MAINACTOR_COPTS,
    module_name = "content",
    deps = [
        "//g1-app/g1protocol",
        "//g1-app/maps",
        "//g1-app/utils",
        "//g1-app/vendor-pcm",
        "//swift-shared/Jotai",
        "//swift-shared/JotaiUtils",
        "//swift-shared/Log",
        "//swift-shared/LogDb",
        "//swift-shared/LogUi",
        "@swiftpkg_swift_collections//:Collections",
    ],
)
