load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")

package(default_visibility = ["//g1-app:__subpackages__"])

swift_library(
    name = "g1protocol",
    srcs = glob(
        ["*.swift"],
        ["*Tests.swift"],
    ),
    module_name = "g1protocol",
    deps = [
        "//g1-app/utils",
        "//swift-shared/Jotai",
        "//swift-shared/Log",
    ],
)

ios_build_test(
    name = "g1protocol_ios_skbsp",
    minimum_os_version = "18.0",
    targets = [
        "g1protocol",
    ],
)

swift_test(
    name = "g1protocol-tests",
    srcs = glob(["*Tests.swift"]),
    deps = [
        ":g1protocol",
    ],
)
