load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_test")
load("//swift-shared:concurrency.bzl", "STRICT_MAINACTOR_COPTS")

package(default_visibility = ["//g1-app:__subpackages__"])

swift_library(
    name = "g1protocol",
    srcs = glob(
        ["*.swift"],
        ["*Tests.swift"],
    ),
    copts = STRICT_MAINACTOR_COPTS,
    module_name = "g1protocol",
    deps = [
        "//g1-app/utils",
        "//swift-shared/Jotai",
        "//swift-shared/Log",
    ],
)

swift_test(
    name = "g1protocol-tests",
    srcs = glob(["*Tests.swift"]),
    deps = [
        ":g1protocol",
    ],
)
